// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render form 1`] = `
<Modal
  contentLabel="header"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        header
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-custom-measure-metric"
        >
          custom_measures.metric
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <i
          className="spinner"
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-custom-measure-value"
        >
          value
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={false}
          id="create-custom-measure-value"
          maxLength={200}
          name="value"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-custom-measure-description"
        >
          description
        </label>
        <textarea
          id="create-custom-measure-description"
          name="description"
          onChange={[Function]}
          value=""
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <DeferredSpinner
        className="spacer-right"
        loading={false}
        timeout={100}
      />
      <button
        disabled={true}
        id="create-custom-measure-submit"
        type="submit"
      >
        confirmButtonText
      </button>
      <button
        className="button-link"
        disabled={false}
        id="create-custom-measure-cancel"
        onClick={[Function]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;

exports[`should render form 2`] = `
<Modal
  contentLabel="header"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        header
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-custom-measure-metric"
        >
          custom_measures.metric
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <Select
          autofocus={true}
          clearable={false}
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "Custom Metric",
                "value": "custom-metric",
              },
            ]
          }
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-custom-measure-value"
        >
          value
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={false}
          id="create-custom-measure-value"
          maxLength={200}
          name="value"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-custom-measure-description"
        >
          description
        </label>
        <textarea
          id="create-custom-measure-description"
          name="description"
          onChange={[Function]}
          value=""
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <DeferredSpinner
        className="spacer-right"
        loading={false}
        timeout={100}
      />
      <button
        disabled={false}
        id="create-custom-measure-submit"
        type="submit"
      >
        confirmButtonText
      </button>
      <button
        className="button-link"
        disabled={false}
        id="create-custom-measure-cancel"
        onClick={[Function]}
        type="reset"
      >
        cancel
      </button>
    </footer>
  </form>
</Modal>
`;
